src/Home/Home.css
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
.container{
    padding-left: 2vw;
    padding-right: 2vw;
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto;
    height: 75vh;
    overflow: auto;
}
.top-row{
    display: flex;
    align-items: center;
}
.bottom-row{
    display: grid;
    grid-template-columns: auto auto;
    justify-items: center;
}
.about-me-text{
    font-family: 'Permanent Marker', cursive;
    margin: 0;
    text-align: center;
    font-size: 3rem;
    text-shadow: 0px 8px 9px #00B6EF;
    color:#333;
}
.skill-container{
    display: grid;
    grid-template-rows: auto auto;
    text-align: center;
    padding: 10px;
    border-radius: 10px;
    box-shadow: 0px 13px 16px rgba(0, 0, 0, 0.25);
}
@media screen and (max-width: 800px) {
    .container{
        grid-template-columns: auto;
        grid-template-rows: 50% 50%;
    }
    .left-col{
        height: 40%;
    }
    .right-col{
        margin-left: 0px;
        height: 60%;
    }
    .skill-container{
        margin: 10px;
    }
    .me-img{
        width: 100%;
    }
    
    .about-me-text{
        font-size: 2rem;
    }
  }

